src/sass/components/_contact.scss
.contact {
  &__left {
    position: sticky;
    top: 5%;

    @media (width <= 884px) {
      top: 3%;
    }

    @media (width <= 640px) {
      position: relative;
    }
  }

  &__content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 8rem;
    align-items: start;

    @media (width <= 884px) {
      gap: 4rem;
    }

    @media (width <= 640px) {
      grid-template-columns: none;
      gap: 6rem;
    }
  }

  &__subtitle {
    font-family: "Antonio", sans-serif;
    font-weight: 600;
    font-size: 1.3rem;
    color: var(--color-zinc-400);
    text-transform: uppercase;

    @media (width <= 640px) {
      font-size: 1.2rem;
    }

    @media (width <= 400px) {
      font-size: 1.1rem;
    }
  }

  &__title {
    margin-top: 20px;
    font-size: 3.5rem;
    line-height: 1.2;
    font-weight: 700;

    @media (width <= 1280px) {
      font-size: 2.8rem;
    }

    @media (width <= 640px) {
      margin-top: 0.7rem;
      font-size: 2.2rem;
    }

    @media (width <= 400px) {
      font-size: 2rem;
    }

    i {
      font-family: "Playfair Display", sans-serif;
      font-style: italic;
      font-weight: 500;
    }
  }

  &__description {
    margin-top: 1.2rem;

    @media (width <= 1280px) {
      margin-top: 1rem;
    }
  }

  &__description,
  &__email {
    max-width: 480px;
    color: var(--color-zinc-400);
    font-size: 1.2rem;
    line-height: 1.7;

    @media (width <= 1280px) {
      font-size: 1rem;
    }
  }

  &__email {
    margin-top: 6rem;

    @media (width <= 1280px) {
      margin-top: 7rem;
    }

    @media (width <= 640px) {
      margin-top: 1rem;
    }
  }

  a {
    font-size: 1.2rem;

    @media (width <= 1280px) {
      font-size: 1rem;
    }

    &:hover {
      text-decoration: underline;
    }
  }
}

.contact-form {
  &__label {
    margin-bottom: 12px;

    display: flex;
    align-items: center;
    gap: 8px;

    font-size: 14px;
    color: #bebec8;
  }
}

.teste {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

